demos/tax-office/k8s/tax-office-base/tax-app/tax-app-deployment.yaml
#
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax-office-app-deployment
  namespace: tax-office-ns
  labels:
    app: tax-office-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tax-office-app
  template:
    metadata:
      labels:
        app: tax-office-app
    spec:
      serviceAccountName: app-ksa
      containers:
      - name: tax-office-container
        # TODO: change it as parameter which should be potentially injected.
        image: docker.pkg-berlin-build0.goog/eu0/svr-bigquery-demo/tax-office-app-registry/tax-office-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
