demos/tax-office/k8s/tax-office-base/tax-app/tax-app-ingress.yaml
#
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tax-app-ingress
  namespace: tax-office-ns
  annotations:
    kubernetes.io/ingress.class: "gce-regional-external"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tax-office-app-service
                port:
                  number: 80
